2007-06-29  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* data/playlist.glade:
	* src/ev-sidebar.c: (ev_sidebar_destroy),
	(ev_sidebar_combobox_changed_cb), (ev_sidebar_init),
	(ev_sidebar_get_current_page), (ev_sidebar_get_iter_for_page_id),
	(ev_sidebar_set_current_page), (ev_sidebar_add_page),
	(ev_sidebar_remove_page): Use a default GtkComboBox instead of the
	custom button menu combination (Closes #397776)

2007-06-28  Christian Persch  <chpe@gnome.org>

        * src/totem.c:
        * src/totem.h:
        * src/totem-private.h:
        * src/backend/bacon-video-widget.h:
        * src/backend/bacon-video-widget-xine.c:
        * src/backend/bacon-video-widget-gst-0.10.c: Use double for the volume
        instead of integer. Bug #451856.

2007-06-28  Christian Persch  <chpe@gnome.org>

        * src/Makefile.am: Fix missing prototypes in totem-marshal.h. Bug #451854.

2007-06-28  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry),
	(parse_asx_entryref), (parse_asx_entries): Patch from
	Karel Kolman <kolmis@gmail.com> to handle ASX files with
	entryrefs without a parent entry (Closes: #450457)

2007-06-28  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_init): patch from Sunil Mohan Adapa
	<sunilmohan@gnu.org.in> to not mark the video widget as having
	no backing window (Helps: #354181)
	* src/totem-private.h:
	* src/totem.c: (main): Remove unused ->fsvolume widget

2007-06-28  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (cb_vol),
	(totem_embedded_construct), (totem_volume_create):
	* configure.in:
	* data/totem.glade:
	* src/Makefile.am:
	* src/bacon-volume.c:
	* src/bacon-volume.h:
	* src/totem-private.h:
	* src/totem.c: (totem_action_set_mrl_with_warning),
	(update_volume_sliders), (volume_button_value_changed),
	(popup_hide), (totem_callback_connect), (totem_volume_create),