@@ -5,6 +5,6 @@
 <body>
 <h1>Test #8</h1><p>
 See <a href="http://bugzilla.gnome.org/show_bug.cgi?id=358277">http://bugzilla.gnome.org/show_bug.cgi?id=358277</a><p>
-<embed type="application/x-mplayer2" src="playlist-with-static-png.asx"" width="512" height="394" mode="null" autoPlay="true"></embed>
+<embed type="application/x-mplayer2" src="playlist-with-static-png.asx" width="512" height="394" mode="null" autoPlay="true"></embed>
 </body>
 </html>
