@@ -1,0 +1,20 @@
+ <html>
+<head>
+<title>Test</title>
+</head>
+<body>
+<h1>Test #9</h1><p>
+See <a href="http://bugzilla.gnome.org/show_bug.cgi?id=452069">http://bugzilla.gnome.org/show_bug.cgi?id=452069</a><p>
+
+<span class="tit_enq" style="margin-bottom:10px; display:block">Escolta aquest MP3 amb QuickTime</span>
+
+<object  CLASSID="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B" width="185" height="20" CODEBASE="http://www.apple.com/qtactivex/qtplugin.cab">
+<param name="src" value="http://listen.flumotion.com/tv3/catradio/low.mp3.m3u?icy=1">
+<param name="autoplay" value="false"> 
+<param name="loop" value="false"> 
+<param name="target" value="myself"> 
+<param name="controller" value="true"> 
+<embed type="audio/mpeg" src="http://listen.flumotion.com/tv3/catradio/low.mp3.m3u?icy=1" QTSRC="http://listen.flumotion.com/tv3/catradio/low.mp3.m3u?icy=1" enablejavascript="true" width="320" height="16" autoplay="false" loop="false" controller="true" target="myself" pluginspage="http://www.apple.com/quicktime/"></embed>
+</object>
+</body>
+</html>
