@@ -1,3 +1,8 @@
+2007-06-28  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/tests/8.html: fix syntax error
+	* browser-plugin/tests/9.html: add new test for bug #452069
+
 2007-06-29  Jan Arne Petersen  <jpetersen@jpetersen.org>
 
 	* data/playlist.glade:
